GiRaFFE_NRPy_C2P_P2C: Fixed bugs preventing selv-validation from passing.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -417,7 +417,7 @@
    ],
    "source": [
     "all_passed=True\n",
-    "def comp_func(expr1,expr2,basename,prefixname2=\"GRFFE.\"):\n",
+    "def comp_func(expr1,expr2,basename,prefixname2=\"C2P_P2C.\"):\n",
     "    if str(expr1-expr2)!=\"0\":\n",
     "        print(basename+\" - \"+prefixname2+basename+\" = \"+ str(expr1-expr2))\n",
     "        all_passed=False\n",
@@ -429,6 +429,59 @@
     "        return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"]\"\n",
     "    return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"][\"+str(idx3)+\"]\"\n",
     "\n",
+    "# Still need to perform self-validation checks on C2P\n",
+    "# testValenciavU = ixp.declarerank1(\"testValenciavU\",DIM=3)\n",
+    "# testStildeD = ixp.declarerank1(\"testStildeDU\",DIM=3)\n",
+    "gammaDD = ixp.declarerank2(\"gammaDD\",\"sym01\")\n",
+    "betaU = ixp.declarerank1(\"betaU\")\n",
+    "BU = ixp.declarerank1(\"BU\")\n",
+    "alpha = sp.symbols('alpha',real=True)\n",
+    "sqrt4pi = sp.symbols('sqrt4pi', real=True)\n",
+    "\n",
+    "notebook_StildeD = StildeD\n",
+    "StildeD = ixp.declarerank1(\"StildeD\")\n",
+    "\n",
+    "import GiRaFFE_NRPy.GiRaFFE_NRPy_C2P_P2C as C2P_P2C\n",
+    "C2P_P2C.GiRaFFE_NRPy_C2P(StildeD,BU,gammaDD,gammaUU,gammadet,betaU,alpha)\n",
+    "\n",
+    "expr_list = []\n",
+    "exprcheck_list = []\n",
+    "namecheck_list = []\n",
+    "\n",
+    "for i in range(3):\n",
+    "    namecheck_list.extend([gfnm(\"StildeD\",i),gfnm(\"ValenciavU\",i)])\n",
+    "    exprcheck_list.extend([C2P_P2C.outStildeD[i],C2P_P2C.ValenciavU[i]])\n",
+    "    expr_list.extend([notebook_StildeD[i],ValenciavU[i]])\n",
+    "\n",
+    "for i in range(len(expr_list)):\n",
+    "    comp_func(expr_list[i],exprcheck_list[i],namecheck_list[i])\n",
+    "\n",
+    "import sys\n",
+    "if all_passed:\n",
+    "    print(\"ALL TESTS PASSED!\")\n",
+    "else:\n",
+    "    print(\"ERROR: AT LEAST ONE TEST DID NOT PASS\")\n",
+    "    sys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALL TESTS PASSED!\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_passed=True\n",
+    "\n",
     "gammaDD = ixp.declarerank2(\"gammaDD\",\"sym01\")\n",
     "betaU = ixp.declarerank1(\"betaU\")\n",
     "ValenciavU = ixp.declarerank1(\"ValenciavU\")\n",
@@ -436,8 +489,6 @@
     "alpha = sp.symbols('alpha',real=True)\n",
     "sqrt4pi = sp.symbols('sqrt4pi', real=True)\n",
     "GiRaFFE_NRPy_P2C(gammaDD,betaU,alpha,  ValenciavU,BU, sqrt4pi)\n",
-    "\n",
-    "import GiRaFFE_NRPy.GiRaFFE_NRPy_C2P_P2C as C2P_P2C\n",
     "\n",
     "C2P_P2C.GiRaFFE_NRPy_P2C(gammaDD,betaU,alpha,  ValenciavU,BU, sqrt4pi)\n",
     "\n",
@@ -459,31 +510,7 @@
     "else:\n",
     "    print(\"ERROR: AT LEAST ONE TEST DID NOT PASS\")\n",
     "    sys.exit(1)\n",
-    "    \n",
-    "# Still need to perform self-validation checks on C2P\n",
-    "# testValenciavU = ixp.declarerank1(\"testValenciavU\",DIM=3)\n",
-    "# testStildeD = ixp.declarerank1(\"testStildeDU\",DIM=3)\n",
-    "# C2P.GiRaFFE_NRPy_C2P(StildeD,ValenciavU,BU,gammaDD,gammaUU,gammadet,betaU,alpha)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_passed=True\n",
-    "def comp_func(expr1,expr2,basename,prefixname2=\"GRFFE.\"):\n",
-    "    if str(expr1-expr2)!=\"0\":\n",
-    "        print(basename+\" - \"+prefixname2+basename+\" = \"+ str(expr1-expr2))\n",
-    "        all_passed=False\n",
-    "\n",
-    "def gfnm(basename,idx1,idx2=None,idx3=None):\n",
-    "    if idx2==None:\n",
-    "        return basename+\"[\"+str(idx1)+\"]\"\n",
-    "    if idx3==None:\n",
-    "        return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"]\"\n",
-    "    return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"][\"+str(idx3)+\"]\"\n"
+    "        "
    ]
   },
   {
