--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -3147,6 +3147,10 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "print(\"Dinv = %.15e\" % Dinv)#TylerK\n",
+    "print(\"Deltat = %.15e\" % Deltat)#TylerK\n",
+    "print(\"Deltar = %.15e\" % Deltar)#TylerK\n",
+    "\n",
     "Deltar = Deltat*Dinv"
    ]
   },
@@ -3425,6 +3429,8 @@
     "    K = 1.4467 \\left( 1 - 4 \\eta \\right)^{2} + 4 \\left( 1 - 2 \\eta \\right) \\eta.\n",
     "\\end{equation*}\n",
     "\n",
+    " <font color='red'>There exists a difference between $K$ as defined in BB2010 and what is coded in LALSuite.  Has this value been updated?</font>\n",
+    "\n",
     "The term $\\eta K - 1$ is sufficiently common that we also define it:\n",
     "\n",
     "\\begin{equation*}\n",
@@ -3451,6 +3457,17 @@
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
     "etaKminus1 = eta*K - 1\n",
+    "\n",
+    "print(\"KK = %.15e\" % K)\n",
+    "\n",
+    "#LALSuite version\n",
+    "K = c20 + c21*eta + c22*(eta*eta) + c23*(eta*eta)*eta\n",
+    "c20  = 1.712\n",
+    "c21  = -1.803949138004582\n",
+    "c22  = -39.77229225266885\n",
+    "c23  = 103.16588921239249\n",
+    "\n",
+    "#BB2010 version\n",
     "K = 1.4467*(1 - 4*eta)*(1 - 4*eta) + 4*(1 - 2*eta)*eta"
    ]
   },
@@ -4266,6 +4283,7 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "print(\"eta = %.15e\" % eta)\n",
     "eta = mu/M"
    ]
   },
