--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -223,33 +223,33 @@
    "source": [
     "# First download the original IllinoisGRMHD source code\n",
     "import urllib\n",
-    "# original_file_url  = [\"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/GiRaFFE/src/GiRaFFE_headers.h\",\\\n",
-    "#                       \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/GiRaFFE/src/inlined_functions.C\",\\\n",
-    "#                       \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFE/src/driver_conserv_to_prims_FFE.C\",\\\n",
-    "#                       \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFE/src/compute_conservatives_FFE.C\",\\\n",
-    "#                       \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFE/src/convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\"\\\n",
-    "#                      ]\n",
-    "# original_file_name = [\"GiRaFFE_headers.h\",\\\n",
-    "#                       \"inlined_functions.C\",\\\n",
-    "#                       \"driver_conserv_to_prims_FFE.C\",\\\n",
-    "#                       \"compute_conservatives_FFE.C\",\\\n",
-    "#                       \"convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\"\\\n",
-    "#                      ]\n",
+    "original_file_url  = [\"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/GiRaFFE/src/GiRaFFE_headers.h\",\\\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/GiRaFFE/src/inlined_functions.C\",\\\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFE/src/driver_conserv_to_prims_FFE.C\",\\\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFE/src/compute_conservatives_FFE.C\",\\\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFE/src/convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\"\\\n",
+    "                     ]\n",
+    "original_file_name = [\"GiRaFFE_headers.h\",\\\n",
+    "                      \"inlined_functions.C\",\\\n",
+    "                      \"driver_conserv_to_prims_FFE.C\",\\\n",
+    "                      \"compute_conservatives_FFE.C\",\\\n",
+    "                      \"convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\"\\\n",
+    "                     ]\n",
     "\n",
-    "# for i in range(len(original_file_url)):\n",
-    "#     original_file_path = os.path.join(out_dir,original_file_name[i])\n",
+    "for i in range(len(original_file_url)):\n",
+    "    original_file_path = os.path.join(out_dir,original_file_name[i])\n",
     "\n",
-    "#     # Then download the original IllinoisGRMHD source code\n",
-    "#     # We try it here in a couple of ways in an attempt to keep\n",
-    "#     # the code more portable\n",
-    "#     try:\n",
-    "#         original_file_code = urllib.request.urlopen(original_file_url[i]).read().decode('utf-8')\n",
-    "#     except:\n",
-    "#         original_file_code = urllib.urlopen(original_file_url[i]).read().decode('utf-8')\n",
+    "    # Then download the original IllinoisGRMHD source code\n",
+    "    # We try it here in a couple of ways in an attempt to keep\n",
+    "    # the code more portable\n",
+    "    try:\n",
+    "        original_file_code = urllib.request.urlopen(original_file_url[i]).read().decode('utf-8')\n",
+    "    except:\n",
+    "        original_file_code = urllib.urlopen(original_file_url[i]).read().decode('utf-8')\n",
     "\n",
-    "#     # Write down the file the original IllinoisGRMHD source code\n",
-    "#     with open(original_file_path,\"w\") as file:\n",
-    "#         file.write(original_file_code)\n",
+    "    # Write down the file the original IllinoisGRMHD source code\n",
+    "    with open(original_file_path,\"w\") as file:\n",
+    "        file.write(original_file_code)\n",
     "    "
    ]
   },
@@ -373,7 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Validation//C2P_P2C_unit_test.C\n"
+      "Overwriting Validation//C2P_P2C_unit_test.C\n"
      ]
     }
    ],
@@ -633,7 +633,7 @@
     "    //                                 1.0-log10(2.0*fabs(auxevol_gfs[IDX4S(STILDED1GF, i0,i1,i2)]-mhd_st_y[0])/(fabs(auxevol_gfs[IDX4S(STILDED1GF, i0,i1,i2)])+fabs(mhd_st_y[0]))),\n",
     "    //                                 1.0-log10(2.0*fabs(auxevol_gfs[IDX4S(STILDED2GF, i0,i1,i2)]-mhd_st_z[0])/(fabs(auxevol_gfs[IDX4S(STILDED2GF, i0,i1,i2)])+fabs(mhd_st_z[0]))));\n",
     "    printf(\"NRPy: %.15e,%.15e,%.15e\\n\",evol_gfs[IDX4S(STILDED0GF, i0,i1,i2)],evol_gfs[IDX4S(STILDED1GF, i0,i1,i2)],evol_gfs[IDX4S(STILDED2GF, i0,i1,i2)]);\n",
-    "    //printf(\"CCTK: %.15e,%.15e,%.15e\\n\",mhd_st_x[0],mhd_st_y[0],mhd_st_z[0]);\n",
+    "    printf(\"CCTK: %.15e,%.15e,%.15e\\n\",mhd_st_x[0],mhd_st_y[0],mhd_st_z[0]);\n",
     "    printf(\"\\n\\n\");\n",
     "    printf(\"NRPy: %.15e,%.15e,%.15e\\n\",auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)],auxevol_gfs[IDX4S(VALENCIAVU1GF, i0,i1,i2)],auxevol_gfs[IDX4S(VALENCIAVU2GF, i0,i1,i2)]);\n",
     "    printf(\"CCTK: %.15e,%.15e,%.15e\\n\",(vx[0]+betaxL)/alphaL,(vy[0]+betayL)/alphaL,(vz[0]+betazL)/alphaL);\n",
@@ -664,17 +664,24 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "\u001b[01m\u001b[KValidation/C2P_P2C_unit_test.C:114:10:\u001b[m\u001b[K \u001b[01;31m\u001b[Kfatal error: \u001b[m\u001b[Kdriver_conserv_to_prims_FFE.C: No such file or directory\n",
-      " #include \u001b[01;31m\u001b[K\"driver_conserv_to_prims_FFE.C\"\u001b[m\u001b[K\n",
-      "          \u001b[01;31m\u001b[K^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\u001b[m\u001b[K\n",
-      "compilation terminated.\n",
-      "Finished in 0.2885282039642334 seconds.\n",
+      "Finished in 0.7392802238464355 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "/bin/sh: 1: ./Validation/C2P_P2C_unit_test: not found\n",
-      "Finished in 0.11397123336791992 seconds.\n",
+      "Valencia 3-velocity: -4.5206e-02, 2.5774e-01, -2.7043e-01\n",
+      "Below are the numbers we care about. These are the Significant Digits of Agreement between the \n",
+      "corrected StildeD and ValenciavU as computed by NRPy+ and ETK. Each row represents a flux \n",
+      "direction; each entry therein corresponds to a component of StildeD. Each pair \n",
+      "of outputs should show at least 10 significant digits of agreement. \n",
+      "\n",
+      "NRPy: 3.404922665567327e-02,-1.940131281362109e-02,-4.942224200430795e-02\n",
+      "CCTK: 4.627747262697585e-02,7.006134587782852e-02,2.289582868330695e-02\n",
+      "\n",
+      "\n",
+      "NRPy: 3.569224897973798e-01,5.426904235142688e-01,2.128854809644346e-01\n",
+      "CCTK: 3.569224897973800e-01,5.426904235142687e-01,2.128854809644346e-01\n",
+      "Finished in 0.1315305233001709 seconds.\n",
       "\n",
       "\n"
      ]
@@ -699,6 +706,143 @@
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "# os.chdir(os.path.join(\"../\"))\n"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Agreement with GiRaFFE:\n",
+    "NRPy: 4.627747262697588e-02,7.006134587782861e-02,2.289582868330698e-02\n",
+    "CCTK: 4.627747262697585e-02,7.006134587782852e-02,2.289582868330695e-02\n",
+    "\n",
+    "Disagreement with IllinoisGRMHD:\n",
+    "NRPy: 3.904407545800359e-02,1.714133235944362e-02,-1.988261468501957e-02\n",
+    "CCTK: 4.627747262697585e-02,7.006134587782852e-02,2.289582868330695e-02"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyzing what's going wrong in P2C\n",
+    "\n",
+    "So far, I've managed to hand-code an expression for $\\tilde{S}_i$ that agrees with `GiRaFFE` to roundoff level precision. However we would like to use an auto-generated version, which has been validated against `IllinoisGRMHD`, but doing so eliminates the agreement, producing *very* different results. \n",
+    "\n",
+    "This is the equation used by `GiRaFFE`:\n",
+    "$$\\tilde{S}_i = \\gamma_{ij} \\frac{\\bar{v}^j \\sqrt{\\gamma}B^2}{4 \\pi},$$\n",
+    "or $$\\tilde{S}_i = \\gamma_{ij} \\frac{(v^j + \\beta^j) \\sqrt{\\gamma}B^2}{4 \\pi \\alpha},$$\n",
+    "where $\\bar{v}^j$ is the Valencia 3-velocity and $v^j$ is the drift velocity.\n",
+    "\n",
+    "In IGM, this is used:\n",
+    "$$\\tilde{S}_i = \\alpha \\sqrt{\\gamma} T^0_{{\\rm EM}i},$$\n",
+    "where \n",
+    "\\begin{align}\n",
+    "T^{\\mu\\nu}_{\\rm EM} &= b^2 u^{\\mu} u^{\\nu} + \\frac{1}{2} b^2 g^{\\mu\\nu} - b^\\mu b^\\nu \\\\\n",
+    "b^0 &= \\frac{u_j B^j}{\\sqrt{4\\pi} \\alpha} \\\\\n",
+    "b^i &= \\frac{B^i + (u_j B^j) u^i}{\\sqrt{4\\pi} \\alpha u^0} \\\\\n",
+    "u^i &= u^0 v^i.\n",
+    "\\end{align}\n",
+    "\n",
+    "`GiRaFFE` cites [this paper](https://arxiv.org/pdf/1310.3274.pdf), specifically eqs. 47 and 85, repeated here:\n",
+    "\\begin{align}\n",
+    "v^i &= \\alpha \\frac{\\gamma^{ij} S_j}{\\mathcal{B}^2} -\\beta^{i} \\\\\n",
+    "v^i &= 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} - \\beta^{i}\n",
+    "\\end{align}\n",
+    "\n",
+    "Let's double check the process between these. By definition, $\\tilde{S}_j \\equiv S_j \\sqrt{\\gamma}$ and $\\mathcal{B}^\\mu \\equiv B^\\mu / \\sqrt{4 \\pi}$. Then $S_j = \\tilde{S}_j / \\sqrt{\\gamma}$ and $\\mathcal{B}^2 = B^2 / \\left( 4 \\pi \\right)$, and the above expressions hold. So, let's solve eq. 85 of $\\tilde{S}_i$.\n",
+    "\\begin{align}\n",
+    "v^i &= 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} - \\beta^{i} \\\\\n",
+    "v^i + \\beta^{i} &= 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} \\\\\n",
+    "\\frac{1}{4 \\pi \\alpha} \\left( v^i + \\beta^{i} \\right) &= \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} \\\\\n",
+    "\\frac{\\sqrt{\\gamma} B^2}{4 \\pi \\alpha} \\left( v^i + \\beta^{i} \\right) &= \\gamma^{ij} \\tilde{S}_j \\\\\n",
+    "\\end{align}\n",
+    "Multiply both sides by $\\gamma_{ki}$:\n",
+    "\\begin{align}\n",
+    "\\gamma_{ki} \\frac{\\sqrt{\\gamma} B^2}{4 \\pi \\alpha} \\left( v^i + \\beta^{i} \\right) &= \\gamma_{ki} \\gamma^{ij} \\tilde{S}_j \\\\\n",
+    "&= \\delta^j_k \\tilde{S}_j \\\\\n",
+    "&= \\tilde{S}_k\n",
+    "\\end{align}\n",
+    "We'll rewrite indices $i \\rightarrow j$ and $k \\rightarrow i$; then $$\\tilde{S}_i = \\gamma_{ij} \\frac{\\sqrt{\\gamma} B^2}{4 \\pi \\alpha} \\left( v^j + \\beta^{j} \\right),$$\n",
+    "which matches what is used in GiRaFFE:$$\\tilde{S}_i = \\gamma_{ij} \\frac{(v^j + \\beta^j) \\sqrt{\\gamma}B^2}{4 \\pi \\alpha}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we'll work to bridge the gap between the expression in terms of the stress-energy tensor and that used in `GiRaFFE`. Consider that $T^0_{{\\rm EM}i} = g_{i \\mu} T^{0 \\mu}_{{\\rm EM}}$. We'll thus start with the index lowering operation.\n",
+    "\\begin{align}\n",
+    "g_{\\mu \\xi} T^{\\xi \\nu}_{\\rm EM} &= g_{\\mu \\xi} \\left( b^2 u^{\\xi} u^{\\nu} + \\frac{1}{2} b^2 g^{\\xi\\nu} - b^\\xi b^\\nu \\right) \\\\\n",
+    "&= b^2 u_{\\mu} u^{\\nu} + \\frac{1}{2} b^2 \\delta^\\nu_\\mu - b_\\mu b^\\nu.\n",
+    "\\end{align}\n",
+    "\n",
+    "After doing so, it is still apparent that we will need $b^2 = g_{\\mu\\nu} b^\\mu b^\\nu$, where \n",
+    "$$\n",
+    "g_{\\mu\\nu} = \\begin{pmatrix} \n",
+    "-\\alpha^2 + \\beta^k \\beta_k & \\beta_i \\\\\n",
+    "\\beta_j & \\gamma_{ij}\n",
+    "\\end{pmatrix}.\n",
+    "$$\n",
+    "Expanding out the implied sum, we see that\n",
+    "\\begin{align}\n",
+    "b^2 &= g_{00} b^0 b^0 + g_{i0} b^i b^0 + g_{0j} b^0 b^j + g_{ij} b^i b^j \\\\\n",
+    "&= \\left(-\\alpha^2 + \\beta^k \\beta_k\\right) b^0 b^0 + \\beta_i b^i b^0 + \\beta_j b^0 b^j + \\gamma_{ij} b^i b^j \\\\\n",
+    "&= \\left(-\\alpha^2 + \\beta^k \\beta_k\\right) b^0 b^0 + 2 \\beta_i b^i b^0 + \\gamma_{ij} b^i b^j \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "Now, it will be useful to plug in the definition of $b^\\mu$. Recall that\n",
+    "\\begin{align}\n",
+    "b^0 &= \\frac{u_j B^j}{\\sqrt{4\\pi} \\alpha} \\\\\n",
+    "b^i &= \\frac{B^i + (u_j B^j) u^i}{\\sqrt{4\\pi} \\alpha u^0} \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "Then \n",
+    "\\begin{align}\n",
+    "b^2 &= \\frac{1}{4 \\pi \\alpha^2} \\left( -\\alpha^2 (u_k B^k)^2 + \\beta^k \\beta_k (u_k B^k)^2 + 2 \\beta_i (u_k B^k) (B^i + (u_k B^k) u^i)/u^0 + \\gamma_{ij}(B^i + (u_k B^k) u^i)(B^j + (u_k B^k) u^j)/(u^0)^2 \\right) \\\\\n",
+    "\\end{align}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(From Paschalidis, et al..; we'll take their word on this one for now):\n",
+    "\\begin{align}\n",
+    "b^2 &= \\frac{B^2 + (u_\\mu B^\\mu)^2}{4 \\pi \\alpha^2 (u^0)^2} \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "So, we insert this into the stress energy tensor:\n",
+    "$$\n",
+    "T^0_{{\\rm EM}i} = \\frac{B^2 + (u_\\mu B^\\mu)^2}{4 \\pi \\alpha^2 (u^0)^2} u_i u^0 - \\gamma_{ij} b^j b^0\n",
+    "$$\n",
+    "Note that since $B^\\mu$ is purely spatial, $B^0=0$, thus $u_\\mu B^\\mu = u_k B^k$\n",
+    "\n",
+    "\\begin{align}\n",
+    "T^0_{{\\rm EM}i} &= \\frac{B^2 + (u_k B^k)^2}{4 \\pi \\alpha^2 u^0} u_i - \\gamma_{ij} \\frac{(B^j + (u_k B^k) u^j)(u_k B^k)}{4 \\pi \\alpha^2 u^0} \\\\\n",
+    "&= \\frac{1}{4 \\pi \\alpha^2 u^0} \\left( B^2 u_i + (u_k B^k)^2 u_i - \\gamma_{ij}(B^j + (u_k B^k) u^j)(u_k B^k)\\right) \\\\\n",
+    "&= \\frac{1}{4 \\pi \\alpha^2 u^0} \\left( B^2 u_i + (u_k B^k)^2 u_i - (B_i + (u_k B^k) u_i)(u_k B^k)\\right) \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "Now, we will substitute in $u_j/u_0 = \\beta_j + \\gamma_{lj} v^l$:\n",
+    "\\begin{align}\n",
+    "&= \\frac{1}{4 \\pi \\alpha^2} \\left( B^2 (\\beta_i + \\gamma_{li} v^l) - B_i (u_k B^k)\\right) \\\\\n",
+    "&= \\frac{1}{4 \\pi \\alpha^2} \\left( B^2 (\\gamma_{ij} \\beta^j + \\gamma_{ij} v^j) - B_i (u_k B^k)\\right) \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "Now, we multiply by $\\alpha \\sqrt{\\gamma}$: \n",
+    "\\begin{align}\n",
+    "\\tilde{S}_i = \\alpha \\sqrt{\\gamma} T^0_{{\\rm EM}i} &= \\gamma_{ij} \\frac{(v^j + \\beta^j) \\sqrt{\\gamma}B^2}{4 \\pi \\alpha} - \\frac{\\sqrt{\\gamma}B_i (u_k B^k)}{4 \\pi \\alpha} \n",
+    "\\end{align}\n",
+    "\n",
+    "We note that there is an extra term here beyond the one that `GiRaFFE` uses for its P2C solver."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
