Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C: Resolved disagreement by manually defining smallb4U with correct GRFFE assumptions.

--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -591,12 +591,12 @@
     "    betaz[0] = betazL;\n",
     "    \n",
     "    /* Generate physically meaningful speeds */\n",
-    "    auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
+    "    /*auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    vx[0] = alphaL*auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)]-betaxL;\n",
     "    auxevol_gfs[IDX4S(VALENCIAVU1GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    vy[0] = alphaL*auxevol_gfs[IDX4S(VALENCIAVU1GF, i0,i1,i2)]-betayL;\n",
     "    auxevol_gfs[IDX4S(VALENCIAVU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
-    "    vz[0] = alphaL*auxevol_gfs[IDX4S(VALENCIAVU2GF, i0,i1,i2)]-betazL;\n",
+    "    vz[0] = alphaL*auxevol_gfs[IDX4S(VALENCIAVU2GF, i0,i1,i2)]-betazL;*/\n",
     "    /* Superluminal speeds for testing */\n",
     "    /*auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
     "    vx[0] = alphaL*auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)]-betaxL;\n",
@@ -664,24 +664,24 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 0.7392802238464355 seconds.\n",
+      "Finished in 0.6953277587890625 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "Valencia 3-velocity: -4.5206e-02, 2.5774e-01, -2.7043e-01\n",
+      "Valencia 3-velocity: 0.0000e+00, 0.0000e+00, 0.0000e+00\n",
       "Below are the numbers we care about. These are the Significant Digits of Agreement between the \n",
       "corrected StildeD and ValenciavU as computed by NRPy+ and ETK. Each row represents a flux \n",
       "direction; each entry therein corresponds to a component of StildeD. Each pair \n",
       "of outputs should show at least 10 significant digits of agreement. \n",
       "\n",
-      "NRPy: 3.404922665567327e-02,-1.940131281362109e-02,-4.942224200430795e-02\n",
-      "CCTK: 4.627747262697585e-02,7.006134587782852e-02,2.289582868330695e-02\n",
+      "NRPy: -8.103178346229994e-05,9.098358855314317e-03,2.385327288495373e-03\n",
+      "CCTK: -8.103178346230343e-05,9.098358855314357e-03,2.385327288495371e-03\n",
       "\n",
       "\n",
-      "NRPy: 3.569224897973798e-01,5.426904235142688e-01,2.128854809644346e-01\n",
-      "CCTK: 3.569224897973800e-01,5.426904235142687e-01,2.128854809644346e-01\n",
-      "Finished in 0.1315305233001709 seconds.\n",
+      "NRPy: -6.252157746176511e-02,7.020809157299354e-01,2.487444985014263e-01\n",
+      "CCTK: -6.252157746176548e-02,7.020809157299390e-01,2.487444985014266e-01\n",
+      "Finished in 0.13214421272277832 seconds.\n",
       "\n",
       "\n"
      ]
