SEOBNR: update initial conditions with input values from LALSuite for direct Hamiltonian comparison.

--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -3147,10 +3147,6 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "print(\"Dinv = %.15e\" % Dinv)#TylerK\n",
-    "print(\"Deltat = %.15e\" % Deltat)#TylerK\n",
-    "print(\"Deltar = %.15e\" % Deltar)#TylerK\n",
-    "\n",
     "Deltar = Deltat*Dinv"
    ]
   },
@@ -3457,8 +3453,6 @@
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
     "etaKminus1 = eta*K - 1\n",
-    "\n",
-    "print(\"KK = %.15e\" % K)\n",
     "\n",
     "#LALSuite version\n",
     "K = c20 + c21*eta + c22*(eta*eta) + c23*(eta*eta)*eta\n",
@@ -4160,6 +4154,10 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "print(\"sigmastar1 = %.15e\" % sigmastar1)#TylerK\n",
+    "print(\"sigmastar2 = %.15e\" % sigmastar2)#TylerK\n",
+    "print(\"sigmastar3 = %.15e\" % sigmastar3)#TylerK\n",
+    "\n",
     "sigmastar1 = m2/m1*S1x + m1/m2*S2x\n",
     "sigmastar2 = m2/m1*S1y + m1/m2*S2y\n",
     "sigmastar3 = m2/m1*S1z + m1/m2*S2z"
@@ -4283,7 +4281,6 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "print(\"eta = %.15e\" % eta)\n",
     "eta = mu/M"
    ]
   },
