--- a/Tutorial-GRFFE_Equations-Cartesian.ipynb
+++ b/Tutorial-GRFFE_Equations-Cartesian.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2.b: Define b^mu.\n",
+    "# Step 2.b.i: Define b^mu.\n",
     "def compute_smallb4U(gammaDD,betaU,alpha, u4U,B_notildeU, sqrt4pi):\n",
     "    global smallb4U\n",
     "    import BSSN.ADMBSSN_tofrom_4metric as AB4m\n",
@@ -228,12 +228,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we compute `smallbsquared`=$b^2 = b_{\\mu} b^{\\mu} = g_{\\mu \\nu} b^{\\nu}b^{\\mu}$:"
+    "However, in the case of pure GRFFE (that is, if we assume the pressure and density make no contribution), we can make an additional simplifying assumption. By choosing to minimize the Lorentz factor, we can define the drift velocity such that the four-velocity is orthogonal to the magnetic field, or $u_j B^j = 0$. Then \n",
+    "\n",
+    "\\begin{align}\n",
+    "\\sqrt{4\\pi} b^0 &= 0 \\\\\n",
+    "\\sqrt{4\\pi} b^i &= \\frac{B^i}{\\alpha u^0}.\n",
+    "\\end{align}\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2.b.ii: Define b^mu when u4 and B are are orthogonal\n",
+    "def compute_smallb4U_with_driftvU_for_FFE(gammaDD,betaU,alpha, u4U,B_notildeU, sqrt4pi):\n",
+    "    global smallb4_driftU\n",
+    "    import BSSN.ADMBSSN_tofrom_4metric as AB4m\n",
+    "    AB4m.g4DD_ito_BSSN_or_ADM(\"ADM\",gammaDD,betaU,alpha)\n",
+    "\n",
+    "    u4D = ixp.zerorank1(DIM=4)\n",
+    "    for mu in range(4):\n",
+    "        for nu in range(4):\n",
+    "            u4D[mu] += AB4m.g4DD[mu][nu]*u4U[nu]\n",
+    "    smallb4_driftU = ixp.zerorank1(DIM=4)\n",
+    "    \n",
+    "    # b^0 = 0\n",
+    "    smallb4_driftU[0] = 0\n",
+    "    # b^i = B^i / [alpha * u^0 * sqrt(4 pi)]\n",
+    "    for i in range(3):\n",
+    "        smallb4_driftU[i+1] = B_notildeU[i] / (alpha*u4U[0]*sqrt4pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we compute `smallbsquared`=$b^2 = b_{\\mu} b^{\\mu} = g_{\\mu \\nu} b^{\\nu}b^{\\mu}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,6 +386,7 @@
     "GRHD.compute_sqrtgammaDET(gammaDD)\n",
     "compute_B_notildeU(GRHD.sqrtgammaDET, B_tildeU)\n",
     "compute_smallb4U(gammaDD,betaU,alpha, u4U, B_notildeU, sqrt4pi)\n",
+    "compute_smallb4U_with_driftvU_for_FFE(gammaDD,betaU,alpha, u4U, B_notildeU, sqrt4pi)\n",
     "compute_smallbsquared(gammaDD,betaU,alpha, smallb4U)\n",
     "\n",
     "compute_TEM4UU(gammaDD,betaU,alpha, smallb4U, smallbsquared,u4U)\n",
@@ -389,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,6 +438,7 @@
     "\n",
     "# Then compute b^mu and b^2:\n",
     "GRFFE.compute_smallb4U(gammaDD, betaU, alpha, u4U, GRFFE.B_notildeU, sqrt4pi)\n",
+    "GRFFE.compute_smallb4U_with_driftvU_for_FFE(gammaDD, betaU, alpha, u4U, GRFFE.B_notildeU, sqrt4pi)\n",
     "GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4U)\n",
     "\n",
     "# Next construct stress-energy tensor T4UU and T4UD:\n",
@@ -427,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -499,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
