SEOBNR: continue to fix typos in Hamiltonian notebook.  Am making notes of differences with LALSuite (some factors of total mass inconsistent).

--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -3295,6 +3295,14 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "#print(\"v3 = %.15e\" % v3)#TylerK\n",
+    "#print(\"v2 = %.15e\" % v2)#TylerK\n",
+    "print(\"bulk = %.15e\" % Deltaubar)#TylerK\n",
+    "\n",
+    "#FIXME: LALSuite version\n",
+    "Deltaubar = a*a*u*u + (2*u + 1/etaKminus1)/etaKminus1\n",
+    "\n",
+    "#FIXME: paper version\n",
     "Deltaubar = a*a*u*u/(M*M) + (2*u + 1/etaKminus1)/etaKminus1"
    ]
   },
@@ -3757,7 +3765,7 @@
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
     "v1 = n2*xi3 - n3*xi2\n",
-    "v2 = n1*xi3 + n3*xi1\n",
+    "v2 = n3*xi1 - n1*xi3\n",
     "v3 = n1*xi2 - n2*xi1"
    ]
   },
@@ -3961,6 +3969,10 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "#FIXME: LALSuite version\n",
+    "a = Skerrmag\n",
+    "\n",
+    "#FIXME: Paper version\n",
     "a = Skerrmag/M"
    ]
   },
@@ -4154,10 +4166,6 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "print(\"sigmastar1 = %.15e\" % sigmastar1)#TylerK\n",
-    "print(\"sigmastar2 = %.15e\" % sigmastar2)#TylerK\n",
-    "print(\"sigmastar3 = %.15e\" % sigmastar3)#TylerK\n",
-    "\n",
     "sigmastar1 = m2/m1*S1x + m1/m2*S2x\n",
     "sigmastar2 = m2/m1*S1y + m1/m2*S2y\n",
     "sigmastar3 = m2/m1*S1z + m1/m2*S2z"
@@ -4209,6 +4217,10 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "#FIXME: LALSuite version\n",
+    "u = 1/r\n",
+    "\n",
+    "#FIXME: paper version\n",
     "u = M/r"
    ]
   },
@@ -4352,6 +4364,9 @@
    ],
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
+    "\n",
+    "#Because we'll need it later\n",
+    "Msqinv = 1/(M*M)\n",
     "\n",
     "M = m1 + m2"
    ]
