GRFFE_Equations-Cartesia: Fixed a typo, expanded the documentation for the new function, renamed the new smallb4U variable to be more descriptive.

--- a/Tutorial-GRFFE_Equations-Cartesian.ipynb
+++ b/Tutorial-GRFFE_Equations-Cartesian.ipynb
@@ -106,18 +106,12 @@
     "\n",
     "\n",
     "1. [Step 1](#importmodules): Import needed NRPy+ & Python modules\n",
-    "1. [Step 2](#stressenergy): **compute_TEM4UU()**, **compute_TEM4UD()**: Define the stress-energy tensor $T^{\\mu\\nu}_{\\rm EM}$ and $T^\\mu_{{\\rm EM}\\nu}$\n",
-    "1. [Step 3](#primtoconserv): **compute_sqrtgammaDET()**, **compute_S_tildeD()**: Writing the conservative variables in terms of the primitive variables\n",
-    "1. [Step 4](#grffefluxes): Define the fluxes for the GRFFE equations\n",
-    "    1. [Step 4.a](#stildesourceterms): **compute_S_tilde_fluxUD()**: Define $\\tilde{S}_i$ flux term for GRFFE equations\n",
-    "1. [Step 5](#grhdsourceterms): Define source terms on RHSs of GRFFE equations\n",
-    "    1. [Step 5.a](#stildeisourceterm): Define source term on RHS of $\\tilde{S}_i$ equation\n",
-    "        1. [Step 5.a.i](#fourmetricderivs): **compute_g4DDdD()**: Compute $g_{\\mu\\nu,i}$ in terms of ADM quantities and their derivatives\n",
-    "        1. [Step 5.a.ii](#stildeisource): **compute_S_tilde_source_termD()**: Compute source term of the $\\tilde{S}_i$ equation: $\\frac{1}{2} \\alpha\\sqrt{\\gamma} T^{\\mu\\nu} g_{\\mu\\nu,i}$\n",
-    "1. [Step 6](#convertvtou): **u4U_in_terms_of_vU_apply_speed_limit()**: Conversion of $v^i$ to $u^\\mu$ (Courtesy Patrick Nelson)\n",
-    "1. [Step 7](#declarevarsconstructgrffeeqs): Declare ADM and hydrodynamical input variables, and construct GRFFE equations\n",
-    "1. [Step 8](#code_validation): Code Validation against `GRFFE.equations` NRPy+ module\n",
-    "1. [Step 9](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
+    "1. [Step 2](#u0bu): Define needed quantities for $T^{\\mu\\nu}_{\\rm EM}$, the EM part of the stress-energy tensor\n",
+    "1. [Step 3](#stressenergy): **compute_TEM4UU()**, **compute_TEM4UD()**: Define the stress-energy tensor $T^{\\mu\\nu}_{\\rm EM}$ and $T^\\mu_{{\\rm EM}\\nu}$\n",
+    "1. [Step 4](#declarevarsconstructgrffeeqs): Declare ADM and hydrodynamical input variables, and construct GRFFE equations\n",
+    "1. [Step 5](#code_validation): Code Validation against `GRFFE.equations` NRPy+ module for GRMHD\n",
+    "1. [Step 6](#code_validation_2): Code Validation against `GRFFE.equations` NRPy+ module for GRFFE\n",
+    "1. [Step 7](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -228,12 +222,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, in the case of pure GRFFE (that is, if we assume the pressure and density make no contribution), we can make an additional simplifying assumption. By choosing to minimize the Lorentz factor, we can define the drift velocity such that the four-velocity is orthogonal to the magnetic field, or $u_j B^j = 0$. Then \n",
+    "However, in the case of pure GRFFE (that is, if we assume the pressure and density are zero), we can make an additional simplifying assumption. When deriving the equations of GRFFE, one has a choice as to how to define the velocity. Following the example set by [McKinney (2006)](https://arxiv.org/pdf/astro-ph/0601410.pdf), section 2.1, and [Paschalidis (2013)](https://arxiv.org/pdf/1310.3274v2.pdf), Appendix A, we choose a referencing frame comoving with the plasma that fulfills the ideal MHD condition (i.e., the electric field is zero). However, in GRFFE, this choice yields a one-parameter family of timelike vectors. By choosing the drift velocity $v^i = u^i/u^0$ that minimizes the Lorentz factor, we find that the four velocity is orthogonal to the magnetic field, or $u_j B^j = 0$. With this assumption, \n",
     "\n",
     "\\begin{align}\n",
     "\\sqrt{4\\pi} b^0 &= 0 \\\\\n",
     "\\sqrt{4\\pi} b^i &= \\frac{B^i}{\\alpha u^0}.\n",
-    "\\end{align}\n"
+    "\\end{align}\n",
+    "\n",
+    "This simplification also gives the inversion from $\\tilde{S}_i$ to the drift velocity $v^i$ a closed form, greatly simplifying the conservative-to-primitive solver and removing the need to "
    ]
   },
   {
@@ -242,9 +238,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2.b.ii: Define b^mu when u4 and B are are orthogonal\n",
+    "# Step 2.b.ii: Define b^mu when u4 and B are orthogonal\n",
     "def compute_smallb4U_with_driftvU_for_FFE(gammaDD,betaU,alpha, u4U,B_notildeU, sqrt4pi):\n",
-    "    global smallb4_driftU\n",
+    "    global smallb4_with_driftv_for_FFE_U\n",
     "    import BSSN.ADMBSSN_tofrom_4metric as AB4m\n",
     "    AB4m.g4DD_ito_BSSN_or_ADM(\"ADM\",gammaDD,betaU,alpha)\n",
     "\n",
@@ -252,13 +248,13 @@
     "    for mu in range(4):\n",
     "        for nu in range(4):\n",
     "            u4D[mu] += AB4m.g4DD[mu][nu]*u4U[nu]\n",
-    "    smallb4_driftU = ixp.zerorank1(DIM=4)\n",
+    "    smallb4_with_driftv_for_FFE_U = ixp.zerorank1(DIM=4)\n",
     "    \n",
     "    # b^0 = 0\n",
-    "    smallb4_driftU[0] = 0\n",
+    "    smallb4_with_driftv_for_FFE_U[0] = 0\n",
     "    # b^i = B^i / [alpha * u^0 * sqrt(4 pi)]\n",
     "    for i in range(3):\n",
-    "        smallb4_driftU[i+1] = B_notildeU[i] / (alpha*u4U[0]*sqrt4pi)"
+    "        smallb4_with_driftv_for_FFE_U[i+1] = B_notildeU[i] / (alpha*u4U[0]*sqrt4pi)"
    ]
   },
   {
@@ -386,7 +382,6 @@
     "GRHD.compute_sqrtgammaDET(gammaDD)\n",
     "compute_B_notildeU(GRHD.sqrtgammaDET, B_tildeU)\n",
     "compute_smallb4U(gammaDD,betaU,alpha, u4U, B_notildeU, sqrt4pi)\n",
-    "compute_smallb4U_with_driftvU_for_FFE(gammaDD,betaU,alpha, u4U, B_notildeU, sqrt4pi)\n",
     "compute_smallbsquared(gammaDD,betaU,alpha, smallb4U)\n",
     "\n",
     "compute_TEM4UU(gammaDD,betaU,alpha, smallb4U, smallbsquared,u4U)\n",
@@ -417,7 +412,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 5: Code Validation against `GRFFE.equations` NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Code Validation against `GRFFE.equations` NRPy+ module for GRMHD \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "As a code validation check, we verify agreement in the SymPy expressions for the GRFFE equations generated in\n",
@@ -438,7 +433,6 @@
     "\n",
     "# Then compute b^mu and b^2:\n",
     "GRFFE.compute_smallb4U(gammaDD, betaU, alpha, u4U, GRFFE.B_notildeU, sqrt4pi)\n",
-    "GRFFE.compute_smallb4U_with_driftvU_for_FFE(gammaDD, betaU, alpha, u4U, GRFFE.B_notildeU, sqrt4pi)\n",
     "GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4U)\n",
     "\n",
     "# Next construct stress-energy tensor T4UU and T4UD:\n",
@@ -527,9 +521,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='code_validation_2'></a>\n",
+    "\n",
+    "# Step 6: Code Validation against `GRFFE.equations` NRPy+ module for GRFFE \\[Back to [top](#toc)\\]\n",
+    "$$\\label{code_validation_2}$$\n",
+    "\n",
+    "Additionally, we verify agreement in the SymPy expressions for the GRFFE equations generated in\n",
+    "1. this tutorial notebook versus\n",
+    "2. the NRPy+ [GRFFE.equations](../edit/GRFFE/equations.py) module\n",
+    "for the case $u_j B^j = 0$. \n",
+    "\n",
+    "We will only recompute $b^\\mu$ and the expressions that depend on it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate the expressions within the tutorial, starting with:\n",
+    "compute_smallb4U_with_driftvU_for_FFE(gammaDD,betaU,alpha, u4U, B_notildeU, sqrt4pi)\n",
+    "compute_smallbsquared(gammaDD,betaU,alpha, smallb4_with_driftv_for_FFE_U)\n",
+    "\n",
+    "compute_TEM4UU(gammaDD,betaU,alpha, smallb4_with_driftv_for_FFE_U, smallbsquared,u4U)\n",
+    "compute_TEM4UD(gammaDD,betaU,alpha, TEM4UU)\n",
+    "\n",
+    "# Compute conservative variables in terms of primitive variables\n",
+    "GRHD.compute_S_tildeD( alpha, GRHD.sqrtgammaDET, TEM4UD)\n",
+    "S_tildeD = GRHD.S_tildeD\n",
+    "\n",
+    "# Next compute fluxes of conservative variables\n",
+    "GRHD.compute_S_tilde_fluxUD(alpha, GRHD.sqrtgammaDET,    TEM4UD)\n",
+    "S_tilde_fluxUD = GRHD.S_tilde_fluxUD\n",
+    "\n",
+    "# Then declare derivatives & compute g4DDdD\n",
+    "gammaDD_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\",DIM=3)\n",
+    "betaU_dD   = ixp.declarerank2(\"betaU_dD\"  ,\"nosym\",DIM=3)\n",
+    "alpha_dD   = ixp.declarerank1(\"alpha_dD\"          ,DIM=3)\n",
+    "GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
+    "\n",
+    "# Finally compute source terms on tau_tilde and S_tilde equations\n",
+    "GRHD.compute_S_tilde_source_termD(alpha, GRHD.sqrtgammaDET, GRHD.g4DD_zerotimederiv_dD, TEM4UU)\n",
+    "S_tilde_source_termD = GRHD.S_tilde_source_termD\n",
+    "\n",
+    "# Now compute the expressions from the module\n",
+    "# Then compute b^mu and b^2:\n",
+    "GRFFE.compute_smallb4U_with_driftvU_for_FFE(gammaDD, betaU, alpha, u4U, GRFFE.B_notildeU, sqrt4pi)\n",
+    "GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4_with_driftv_for_FFE_U)\n",
+    "\n",
+    "# Next construct stress-energy tensor T4UU and T4UD:\n",
+    "GRFFE.compute_TEM4UU(gammaDD,betaU,alpha, GRFFE.smallb4_with_driftv_for_FFE_U, GRFFE.smallbsquared,u4U)\n",
+    "GRFFE.compute_TEM4UD(gammaDD,betaU,alpha, GRFFE.TEM4UU)\n",
+    "\n",
+    "# Compute conservative variables in terms of primitive variables\n",
+    "GRHD.compute_S_tildeD(alpha, GRHD.sqrtgammaDET, GRFFE.TEM4UD)\n",
+    "Ge_S_tildeD = GRHD.S_tildeD\n",
+    "\n",
+    "# Next compute fluxes of conservative variables\n",
+    "GRHD.compute_S_tilde_fluxUD(alpha, GRHD.sqrtgammaDET, GRFFE.TEM4UD)\n",
+    "Ge_S_tilde_fluxUD = GRHD.S_tilde_fluxUD\n",
+    "\n",
+    "# Then declare derivatives & compute g4DDdD\n",
+    "# gammaDD_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\",DIM=3)\n",
+    "# betaU_dD   = ixp.declarerank2(\"betaU_dD\"  ,\"nosym\",DIM=3)\n",
+    "# alpha_dD   = ixp.declarerank1(\"alpha_dD\"          ,DIM=3)\n",
+    "GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
+    "\n",
+    "# Finally compute source terms on S_tilde equations\n",
+    "GRHD.compute_S_tilde_source_termD(alpha, GRHD.sqrtgammaDET,GRHD.g4DD_zerotimederiv_dD,GRFFE.TEM4UU)\n",
+    "Ge_S_tilde_source_termD = GRHD.S_tilde_source_termD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALL TESTS PASSED!\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_passed=True\n",
+    "\n",
+    "expr_list = []\n",
+    "exprcheck_list = []\n",
+    "namecheck_list = []\n",
+    "\n",
+    "for mu in range(4):\n",
+    "    for nu in range(4):\n",
+    "        namecheck_list.extend([gfnm(\"TEM4UU\",mu,nu),gfnm(\"TEM4UD\",mu,nu)])\n",
+    "        exprcheck_list.extend([GRFFE.TEM4UU[mu][nu],GRFFE.TEM4UD[mu][nu]])\n",
+    "        expr_list.extend([TEM4UU[mu][nu],TEM4UD[mu][nu]])\n",
+    "        \n",
+    "for i in range(3):\n",
+    "    namecheck_list.extend([gfnm(\"S_tildeD\",i),gfnm(\"S_tilde_source_termD\",i)])\n",
+    "    exprcheck_list.extend([Ge_S_tildeD[i],Ge_S_tilde_source_termD[i]])\n",
+    "    expr_list.extend([S_tildeD[i],S_tilde_source_termD[i]])\n",
+    "    for j in range(3):\n",
+    "        namecheck_list.extend([gfnm(\"S_tilde_fluxUD\",i,j)])\n",
+    "        exprcheck_list.extend([Ge_S_tilde_fluxUD[i][j]])\n",
+    "        expr_list.extend([S_tilde_fluxUD[i][j]])\n",
+    "\n",
+    "for i in range(len(expr_list)):\n",
+    "    comp_func(expr_list[i],exprcheck_list[i],namecheck_list[i])\n",
+    "\n",
+    "import sys\n",
+    "if all_passed:\n",
+    "    print(\"ALL TESTS PASSED!\")\n",
+    "else:\n",
+    "    print(\"ERROR: AT LEAST ONE TEST DID NOT PASS\")\n",
+    "    sys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 6: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 7: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
@@ -538,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
