GiRaFFE_NRPy-C2P_P2C: Correctly propagated the new variable name from GRFFE.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -380,9 +380,9 @@
     "    \n",
     "    GRHD.u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha, betaU, gammaDD, ValenciavU)\n",
     "    GRFFE.compute_smallb4U_with_driftvU_for_FFE(gammaDD, betaU, alpha, GRHD.u4U_ito_ValenciavU, BU, sqrt4pi)\n",
-    "    GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4_driftU)\n",
+    "    GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4_with_driftv_for_FFE_U)\n",
     "\n",
-    "    GRFFE.compute_TEM4UU(gammaDD, betaU, alpha, GRFFE.smallb4_driftU, GRFFE.smallbsquared, GRHD.u4U_ito_ValenciavU)\n",
+    "    GRFFE.compute_TEM4UU(gammaDD, betaU, alpha, GRFFE.smallb4_with_driftv_for_FFE_U, GRFFE.smallbsquared, GRHD.u4U_ito_ValenciavU)\n",
     "    GRFFE.compute_TEM4UD(gammaDD, betaU, alpha, GRFFE.TEM4UU)\n",
     "\n",
     "    # Compute conservative variables in terms of primitive variables\n",
