Tutorial-GRHD_Equations-Cartesian: fix a couple typos found by Mew-Bing Wan

--- a/Tutorial-GRHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian.ipynb
@@ -575,7 +575,7 @@
     "1. Choose a maximum Lorentz factor $\\Gamma_{\\rm max}$=`GAMMA_SPEED_LIMIT`, and define $v^i_{(n)} = \\frac{1}{\\alpha}\\left( \\frac{u^i}{u^0} + \\beta^i\\right)$.\n",
     "1. Compute $R=\\gamma_{ij}v^i_{(n)}v^j_{(n)}=1 - \\frac{1}{\\Gamma^2}$\n",
     "1. If $R \\le 1 - \\frac{1}{\\Gamma_{\\rm max}^2}$, then skip the next step.\n",
-    "1. Otherwise if $R > 1 - \\frac{1}{\\Gamma_{\\rm max}^2}$ then adjust $v^i_{(n)}= \\sqrt{\\frac{1 - \\frac{1}{\\Gamma_{\\rm max}^2}}{R}}v^i_{(n)}$, which will force $R=R_{\\rm max}$.\n",
+    "1. Otherwise if $R > 1 - \\frac{1}{\\Gamma_{\\rm max}^2}$ then adjust $v^i_{(n)}\\to \\sqrt{\\frac{1 - \\frac{1}{\\Gamma_{\\rm max}^2}}{R}}v^i_{(n)}$, which will force $R=R_{\\rm max}$.\n",
     "1. Given the $R$ computed in the above step, $u^0 = \\frac{1}{\\alpha \\sqrt{1-R}}$, and $u^i=u^0 v^i$.\n",
     "\n",
     "While the above algorithm is quite robust, its `if()` statement in the fourth step is not very friendly to NRPy+ or an optimizing C compiler, as it would require NRPy+ to generate separate C kernels for each branch of the `if()`. Let's instead try the following trick, which Roland Haas taught us. \n",
