Tutorial-GRHD_Equations-Cartesian: fix a couple typos found by Mew-Bing Wan

--- a/Tutorial-GRHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian.ipynb
@@ -661,7 +661,7 @@
     "    global rescaledValenciavU\n",
     "    rescaledValenciavU = ixp.zerorank1(DIM=3)\n",
     "    for i in range(3):\n",
-    "        # If R == 0, then Rstar == 0, so Rmax/(R+TINYDOUBLE)=0/1e-100 = 0\n",
+    "        # If R == 0, then Rstar == 0, so sqrt( Rstar/(R+TINYDOUBLE) )=sqrt(0/1e-100) = 0\n",
     "        #   If your velocities are of order 1e-100 and this is physically\n",
     "        #   meaningful, there must be something wrong with your unit conversion.\n",
     "        rescaledValenciavU[i] = ValenciavU[i]*sp.sqrt(Rstar/(R + TINYDOUBLE))\n",
