--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -3295,10 +3295,6 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "#print(\"v3 = %.15e\" % v3)#TylerK\n",
-    "#print(\"v2 = %.15e\" % v2)#TylerK\n",
-    "print(\"bulk = %.15e\" % Deltaubar)#TylerK\n",
-    "\n",
     "#FIXME: LALSuite version\n",
     "Deltaubar = a*a*u*u + (2*u + 1/etaKminus1)/etaKminus1\n",
     "\n",
@@ -3400,6 +3396,10 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "print(\"Delta2 = %.15e\" % Delta2)#TylerK\n",
+    "print(\"Delta1 = %.15e\" % Delta1)#TylerK\n",
+    "print(\"Delta0 = %.15e\" % Delta0)#TylerK\n",
+    "\n",
     "Delta5l = etaKminus1**2*64./5.\n",
     "Delta5 = etaKminus1**2*((sp.Rational(-4237,60) + sp.Rational(128,5)*gamma + sp.Rational(2275,512)*sp.pi**2\n",
     "                         - sp.Rational(1,3)*a**2*(Delta1**3 - 3*Delta1*Delta2 + 3*Delta3)\n",
@@ -3413,7 +3413,7 @@
     "                           + 6*(Delta2**2 - 4*Delta3*etaKminus1))\n",
     "Delta3 = sp.Rational(1,3)*(-Delta1**3 + 3*etaKminus1*Delta1**2 + 3*Delta2*Delta1 - 6*etaKminus1*(-eta*K + Delta2 + 1)\n",
     "                           - 3*a2M2inv*etaKminus1**2*Delta1)\n",
-    "Delta2 = sp.Rational(1,2)*Delta1*(-4*eta*K + Delta1 + 4) - a2M2inv*etaKminus1*etaKminus1*Delta0\n",
+    "Delta2 = sp.Rational(1,2)*Delta1*(Delta1 - 4*etaKminus1) - a2M2inv*etaKminus1*etaKminus1*Delta0\n",
     "Delta1 = -2*etaKminus1*(K + Delta0)\n",
     "Delta0 = K*(eta*K - 2)"
    ]
