--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -3184,6 +3184,10 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "print(\"Deltat = %.15e\" % Deltat)#TylerK\n",
+    "#print(\"Delta5 = %.15e\" % Delta5)#TylerK\n",
+    "#print(\"Delta4 = %.15e\" % Delta4)#TylerK\n",
+    "\n",
     "Deltat = r*r*Deltau"
    ]
   },
@@ -3349,6 +3353,8 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "\n",
+    "#FIXME: LALSuite version\n",
     "Deltaucalib = 1 + eta*(Delta0 + sp.log(1 + Delta1*u + Delta2*u*u + Delta3*u*u*u + Delta4*u*u*u*u + Delta5*u*u*u*u*u\n",
     "                                       + Delta5l*u*u*u*u*u*sp.log(u)))"
    ]
@@ -3396,23 +3402,41 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "print(\"Delta2 = %.15e\" % Delta2)#TylerK\n",
-    "print(\"Delta1 = %.15e\" % Delta1)#TylerK\n",
-    "print(\"Delta0 = %.15e\" % Delta0)#TylerK\n",
-    "\n",
     "Delta5l = etaKminus1**2*64./5.\n",
+    "\n",
+    "#FIXME: LALSuite version\n",
     "Delta5 = etaKminus1**2*((sp.Rational(-4237,60) + sp.Rational(128,5)*gamma + sp.Rational(2275,512)*sp.pi**2\n",
     "                         - sp.Rational(1,3)*a**2*(Delta1**3 - 3*Delta1*Delta2 + 3*Delta3)\n",
-    "                         - (Delta1**5 - 5*Delta1**3*Delta2 + 5*Delta1*Delta2**2 + 5*Delta1**2*Delta3 - 5*Delta2*Delta3\n",
-    "                            - 5*Delta1*Delta4)/(5*etaKminus1**2)\n",
-    "                         + (Delta1**4 - 4*Delta1**2*Delta2 + 2*Delta2**2 + 4*Delta1*Delta3 - 4*Delta4)/(2*etaKminus1)\n",
+    "                         - (Delta1**5 - 5*Delta1**3*Delta2 + 5*Delta1*Delta2**2 + 5*Delta1**2*Delta3\n",
+    "                            - 5*Delta2*Delta3 - 5*Delta1*Delta4)/(5*etaKminus1**2) + (Delta1**4\n",
+    "                            - 4*Delta1**2*Delta2 + 2*Delta2**2 + 4*Delta1*Delta3 - 4*Delta4)/(2*etaKminus1)\n",
+    "                        + sp.Rational(256,5)*sp.log(2)))\n",
+    "#FIXME: paper version?\n",
+    "Delta5 = etaKminus1**2*((sp.Rational(-4237,60) + sp.Rational(128,5)*gamma + sp.Rational(2275,512)*sp.pi**2\n",
+    "                         - sp.Rational(1,3)*a**2*(Delta1**3 - 3*Delta1*Delta2 + 3*Delta3)\n",
+    "                         - (Delta1**5 - 5*Delta1**3*Delta2 + 5*Delta1*Delta2**2 + 5*Delta1**2*Delta3\n",
+    "                            - 5*Delta2*Delta3 - 5*Delta1*Delta4)/(5*etaKminus1**2) + (Delta1**4\n",
+    "                            - 4*Delta1**2*Delta2 + 2*Delta2**2 + 4*Delta1*Delta3 - 4*Delta4)/(2*etaKminus1)\n",
     "                        + sp.Rational(256,5)*sp.log(2)) + sp.Rational(64,5)*sp.log(u))\n",
+    "#FIXME: LALSuite version\n",
+    "Delta4 = sp.Rational(1,12)*(6*a*a*(Delta1**2 - 2*Delta2)*etaKminus1**2 + 3*Delta1**4 - 8*etaKminus1*Delta1**3\n",
+    "                           -12*Delta2*Delta1**2 + 12*(2*etaKminus1*Delta2 + Delta3)*Delta1\n",
+    "                           + 12*(sp.Rational(94,3) - sp.Rational(41,32)*sp.pi**2)*etaKminus1**2\n",
+    "                           + 6*(Delta2**2 - 4*Delta3*etaKminus1))\n",
+    "#FIXME: paper version\n",
     "Delta4 = sp.Rational(1,12)*(6*a2M2inv*(Delta1**2 - 2*Delta2)*etaKminus1**2 + 3*Delta1**4 - 8*etaKminus1*Delta1**3\n",
     "                           -12*Delta2*Delta1**2 + 12*(2*etaKminus1*Delta2 + Delta3)*Delta1\n",
     "                           + 12*(sp.Rational(94,3) - sp.Rational(41,32)*sp.pi**2)*etaKminus1**2\n",
     "                           + 6*(Delta2**2 - 4*Delta3*etaKminus1))\n",
-    "Delta3 = sp.Rational(1,3)*(-Delta1**3 + 3*etaKminus1*Delta1**2 + 3*Delta2*Delta1 - 6*etaKminus1*(-eta*K + Delta2 + 1)\n",
-    "                           - 3*a2M2inv*etaKminus1**2*Delta1)\n",
+    "#FIXME: LALSuite version\n",
+    "Delta3 = -(Delta1*Delta1)*Delta1*sp.Rational(1,3) + Delta1*Delta2 + (Delta1*Delta1)*etaKminus1\n",
+    "            - 2.*(Delta2 - etaKminus1)*etaKminus1 - a*a*Delta1*(etaKminus1*etaKminus1)\n",
+    "#FIXME: paper version\n",
+    "Delta3 = sp.Rational(1,3)*(-Delta1**3 + 3*etaKminus1*Delta1**2 + 3*Delta2*Delta1 - 6*etaKminus1*(-eta*K + Delta2\n",
+    "                            + 1) - 3*a2M2inv*etaKminus1**2*Delta1)\n",
+    "#FIXME: LALSuite version\n",
+    "Delta2 = sp.Rational(1,2)*Delta1*(Delta1 - 4*etaKminus1) - a*a*etaKminus1*etaKminus1*Delta0\n",
+    "#FIXME: paper version\n",
     "Delta2 = sp.Rational(1,2)*Delta1*(Delta1 - 4*etaKminus1) - a2M2inv*etaKminus1*etaKminus1*Delta0\n",
     "Delta1 = -2*etaKminus1*(K + Delta0)\n",
     "Delta0 = K*(eta*K - 2)"
