SEOBNR: update Hamiltonian; Deltasigmastar agrees with LALSuite.

--- a/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -1111,9 +1111,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hns=9.775249958268847e-01\n",
-      "bpsum = -9.333670008818987e-06\n",
-      "Hreal = 2.633480916352781e+01\n"
+      "sigmacoeffTerm2=-4.799107823366251e-03\n",
+      "sigmastarcoeffTerm2 = 2.928954268442338e-03\n",
+      "\n",
+      "Deltasigmastar3=2.093022277294561e-04\n",
+      "Deltasigmastar2 = -1.688295698952585e-04\n",
+      "Deltasigmastar1 = 1.060247616435915e-04\n",
+      "Hreal = 2.633470780176605e+01\n"
      ]
     }
    ],
