--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -198,7 +198,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting SEOBNR/Hamiltonian-Hreal_on_top.txt\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "Hreal = M*sp.sqrt(1 + 2*eta*(Heff/mu - 1))"
@@ -226,7 +234,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to SEOBNR/Hamiltonian-Hreal_on_top.txt\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
@@ -1687,6 +1703,19 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "print(\"Deltasigmastar1 = %.15e\" % Deltasigmastar1)#TylerK\n",
+    "print(\"Deltasigmastar2 = %.15e\" % Deltasigmastar2)#TylerK\n",
+    "print(\"Deltasigmastar3 = %.15e\" % Deltasigmastar3)#TylerK\n",
+    "\n",
+    "#print(\"sigmastarcoeffTerm3 = %.15e\\n\" % sigmastarcoeffTerm3)#TylerK\n",
+    "#print(\"sigmacoeffTerm3 = %.15e\" % sigmacoeffTerm3)#TylerK\n",
+    "\n",
+    "print(\"sigmastarcoeffTerm2 = %.15e\\n\" % sigmastarcoeffTerm2)#TylerK\n",
+    "print(\"sigmacoeffTerm2 = %.15e\" % sigmacoeffTerm2)#TylerK\n",
+    "\n",
+    "#print(\"sigmastarcoeffTerm1 = %.15e\\n\" % sigmastarcoeffTerm1)#TylerK\n",
+    "#print(\"sigmacoeffTerm1 = %.15e\" % sigmacoeffTerm1)#TylerK\n",
+    "\n",
     "Deltasigmastar1 = sigmastar1*sigmastarcoeff + sigma1*sigmacoeff\n",
     "Deltasigmastar2 = sigmastar2*sigmastarcoeff + sigma2*sigmacoeff\n",
     "Deltasigmastar3 = sigmastar3*sigmastarcoeff + sigma3*sigmacoeff"
@@ -1764,6 +1793,10 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "#FIXME: LALSuite version\n",
+    "sigmastarcoeffTerm1 = eta/12*(14/r + 4*Qminus1 - 30*DrSipn2)\n",
+    "\n",
+    "#FIXME: paper version\n",
     "sigmastarcoeffTerm1 = eta/12*(14*M/r + 4*Qminus1 - 30*DrSipn2)"
    ]
   },
@@ -1808,6 +1841,17 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "#FIXME: LALSuite version\n",
+    "sigmastarcoeffTerm2 = (-706.0+(206.0*Qminus1-282.0*DrSipn2+(-96.0*DrSipn2*Qminus1+23.0*Qminus1*Qminus1)*r)*r\n",
+    "                       +(54.0+( -120.0*Qminus1+324.0*DrSipn2+(-360.0*DrSipn2*DrSipn2+126.0*DrSipn2*Qminus1\n",
+    "                                                     +3.0*Qminus1*Qminus1)*r)*r)*eta)*eta*u*u*(-1./72.0)\n",
+    "\n",
+    "#FIXME: LALSuite version\n",
+    "sigmastarcoeffTerm2 = eta/(72*r*r)*(706 + r*(-206*Qminus1 + 282*DrSipn2 + r*Qminus1*(96*DrSipn2 - 23*Qminus1))\n",
+    "                                    + eta*(54 + r*(120*Qminus1-324*DrSipn2\n",
+    "                                                        + r*(360*DrSipn2**2 + Qminus1*(-126*DrSipn2 - 3*Qminus1)))))\n",
+    "\n",
+    "#FIXME: paper version\n",
     "sigmastarcoeffTerm2 = eta/(72*r*r)*(706 + r*(-206*M*Qminus1 + 282*M*DrSipn2 + r*Qminus1*(96*DrSipn2 - 23*Qminus1))\n",
     "                                    + eta*(54*M**2 + r*(120*M*Qminus1-324*M*DrSipn2\n",
     "                                                        + r*(360*DrSipn2**2 + Qminus1*(-126*DrSipn2 - 3*Qminus1)))))"
@@ -1847,7 +1891,8 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "sigmastarcoeffTerm3 = dSO*eta/(r*r*r)"
+    "#FIXME: this term is always zero... why?\n",
+    "sigmastarcoeffTerm3 = 0"
    ]
   },
   {
@@ -1922,6 +1967,10 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "#FIXME: LALSuite version\n",
+    "sigmacoeffTerm1 = eta/12*(-8/r + 3*Qminus1 - 36*DrSipn2)\n",
+    "\n",
+    "#FIXME: paper version\n",
     "sigmacoeffTerm1 = eta/12*(-8*M/r + 3*Qminus1 - 36*DrSipn2)"
    ]
   },
@@ -1964,6 +2013,17 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "#FIXME: LALSuite version\n",
+    "sigmacoeffTerm2 = (-56.0/9.0*u*u+(-2.0/3.0*DrSipn2*u*u-109.0/36.0*Qminus1*u*u\n",
+    "                                  +(DrSipn2*Qminus1*u*u/4.0-5.0/16.0*Qminus1*Qminus1*u*u)*r)*r\n",
+    "                   +(-7.0/3.0*u*u+(-49.0/8.0*DrSipn2*u*u+17.0/12.0*Qminus1*u*u+(45.0/8.0* DrSipn2*DrSipn2*u*u\n",
+    "                                                                    -13.0/8.0*DrSipn2*Qminus1*u*u)*r)*r)*eta)*eta\n",
+    "\n",
+    "#FIXME: LALSuite version\n",
+    "sigmacoeffTerm2 = eta/(144*r**2)*(-896* + r*(-436*Qminus1 - 96*DrSipn2 + r*(-45*Qminus1**2 + 36*Qminus1*DrSipn2))\n",
+    "                                 + eta*(-336*M**2 + r*(204*Qminus1 - 882*DrSipn2 + r*(810*DrSipn2**2 - 234*Qminus1*DrSipn2))))\n",
+    "\n",
+    "#FIXME: paper version\n",
     "sigmacoeffTerm2 = eta/(144*r**2)*(-896*M**2 + r*(-436*Qminus1 - 96*M*DrSipn2 + r*(-45*Qminus1**2 + 36*Qminus1*DrSipn2))\n",
     "                                 + eta*(-336*M**2 + r*(204*M*Qminus1 - 882*M*DrSipn2 + r*(810*DrSipn2**2 - 234*Qminus1*DrSipn2))))"
    ]
@@ -2002,7 +2062,7 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "sigmacoeffTerm3 = eta*dSO"
+    "sigmacoeffTerm3 = eta*dSO*u*u*u"
    ]
   },
   {
