GiRaFFE_NRPy-Induction_Equation: Coded the basic functions needed for this algorithm.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb
@@ -213,11 +213,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An outline of a general finite-volume method is as follows, with the current step in bold:\n",
+    "1. The Reconstruction Step - Piecewise Parabolic Method\n",
+    "    1. Within each cell, fit to a function that conserves the volume in that cell using information from the neighboring cells\n",
+    "        * For PPM, we will naturally use parabolas\n",
+    "    1. Use that fit to define the state at the left and right interface of each cell\n",
+    "    1. Apply a slope limiter to mitigate Gibbs phenomenon\n",
+    "1. Interpolate the value of the metric gridfunctions on the cell faces\n",
+    "1. **Solving the Riemann Problem - Harten, Lax, (This notebook, $E_i$ only)**\n",
+    "    1. **Use the left and right reconstructed states to calculate the unique state at boundary**\n",
+    "\n",
+    "We will assume in this notebook that the reconstructed velocities and magnetic fields are available on cell faces as input. We will also assume that the metric gridfunctions have been interpolated on the metric faces. \n",
+    "\n",
+    "Solving the Riemann problem, then, consists of two substeps: First, we compute the flux through each face of the cell. Then, we add the average of these fluxes to the right-hand side of the evolution equation for the vector potential. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We begin by importing the NRPy+ core functionality. We also import the Levi-Civita symbol, the GRHD module, and the GRFFE module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 0: Add NRPy's directory to the path\n",
+    "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
+    "from outputC import *            # NRPy+: Core C code output module\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import loop as lp                # NRPy+: Generate C code loops\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
+    "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
+    "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
+    "\n",
+    "thismodule = \"GiRaFFE_NRPy-Induction_Equation\"\n",
+    "\n",
+    "import GRHD.equations as GRHD\n",
+    "import GRFFE.equations as GRFFE\n",
+    "\n",
+    "# Import the Levi-Civita symbol and build the corresponding tensor.\n",
+    "# We already have a handy function to define the Levi-Civita symbol in WeylScalars\n",
+    "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function is identical to the one done by Stilde_flux. See [that tutorial](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb#hydro_speed) for further information on the derivation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We'll write this as a function so that we can calculate the expressions on-demand for any choice of i\n",
+    "def find_cp_cm(lapse,shifti,gupii):\n",
+    "    # Inputs:  u0,vi,lapse,shift,gammadet,gupii\n",
+    "    # Outputs: cplus,cminus \n",
+    "    \n",
+    "    # a = 1/(alpha^2)\n",
+    "    a = 1/(lapse*lapse)\n",
+    "    # b = 2 beta^i / alpha^2\n",
+    "    b = 2 * shifti /(lapse*lapse)\n",
+    "    # c = -g^{ii} + (beta^i)^2 / alpha^2\n",
+    "    c = - gupii + shifti*shifti/(lapse*lapse)\n",
+    "    \n",
+    "    # Now, we are free to solve the quadratic equation as usual. We take care to avoid passing a\n",
+    "    # negative value to the sqrt function.\n",
+    "    detm = b*b - 4*a*c\n",
+    "    detm = sp.sqrt(sp.Rational(1,2)*(detm + nrpyAbs(detm)))\n",
+    "    global cplus,cminus\n",
+    "    cplus  = sp.Rational(1,2)*(-b/a + detm/a)\n",
+    "    cminus = sp.Rational(1,2)*(-b/a - detm/a)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function is identical to the one done by Stilde_flux. For more information, see [here](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb#fluxes)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# We'll write this as a function, and call it within HLLE_solver, below.\n",
+    "def find_cmax_cmin(flux_dirn,gamma_faceDD,beta_faceU,alpha_face):\n",
+    "    # Inputs:  flux direction flux_dirn, Inverse metric gamma_faceUU, shift beta_faceU,\n",
+    "    #          lapse alpha_face, metric determinant gammadet_face\n",
+    "    # Outputs: maximum and minimum characteristic speeds cmax and cmin\n",
+    "    # First, we need to find the characteristic speeds on each face\n",
+    "    gamma_faceUU,unusedgammaDET = ixp.generic_matrix_inverter3x3(gamma_faceDD)\n",
+    "    find_cp_cm(alpha_face,beta_faceU[flux_dirn],gamma_faceUU[flux_dirn][flux_dirn])\n",
+    "    cpr = cplus\n",
+    "    cmr = cminus\n",
+    "    find_cp_cm(alpha_face,beta_faceU[flux_dirn],gamma_faceUU[flux_dirn][flux_dirn])\n",
+    "    cpl = cplus\n",
+    "    cml = cminus\n",
+    "    \n",
+    "    # The following algorithms have been verified with random floats:\n",
+    "    \n",
+    "    global cmax,cmin\n",
+    "    # Now, we need to set cmax to the larger of cpr,cpl, and 0\n",
+    "    cmax = sp.Rational(1,2)*(cpr+cpl+nrpyAbs(cpr-cpl))\n",
+    "    cmax = sp.Rational(1,2)*(cmax+nrpyAbs(cmax))\n",
+    "    \n",
+    "    # And then, set cmin to the smaller of cmr,cml, and 0\n",
+    "    cmin =  sp.Rational(1,2)*(cmr+cml-nrpyAbs(cmr-cml))\n",
+    "    cmin = -sp.Rational(1,2)*(cmin-nrpyAbs(cmin))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See GRHydro paper for equations (TBA)**TODO**\n",
+    "\n",
+    "Here, we we calculate the flux and state vectors for the electric field.\n",
+    "The flux vector in the $i^{\\rm th}$ direction is given as \n",
+    "$$\n",
+    "F(U) = \\epsilon_{ijk} v^j B^k,\n",
+    "$$\n",
+    "where $\\epsilon{ijk} = [ijk]\\sqrt{\\gamma}$, $[ijk]$ is the Levi-Civita symbol, $\\gamma$ is the determinant of the three-metric, and $v^j = \\alpha \\bar{v^j} - \\beta^j$ is the drift velocity; the state vector in the $i^{\\rm th}$ direction is $U = B^i$.\n",
+    "\n",
+    "**TODO** Why is there only one free index in this flux, but two for $\\tilde{S}_i$? I think the LC tensor might be implicitly contain a loop that had to be explicitly written in the other case?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_flux_and_state_for_Induction(flux_dirn, gammaDD,betaU,alpha,ValenciavU,BU):\n",
+    "    GRHD.compute_sqrtgammaDET(gammaDD)\n",
+    "    LeviCivitaDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
+    "    LeviCivitaDDD = ixp.zerorank3()\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            for k in range(DIM):\n",
+    "                LCijk = LeviCivitaDDD[i][j][k]\n",
+    "                LeviCivitaDDD[i][j][k] = LCijk * GRHD.sqrtgammaDET)\n",
+    "    #             LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gammadet)\n",
+    "\n",
+    "    global U,F\n",
+    "    # Flux F = \\epsilon_{ijk} v^j B^k\n",
+    "    F = sp.sympify(0)\n",
+    "    for j in range(3):\n",
+    "        for k in range(3):\n",
+    "            F = LeviCivitaDDD[flux_dirn][j][k] * (alpha*ValenciavU[j]-betaU[j]) * BU[k]\n",
+    "    # U = B^i\n",
+    "    U = BU[flux_dirn]\n",
+    "\n",
+    "def HLLE_solver(cmax, cmin, Fr, Fl, Ur, Ul): \n",
+    "    # This solves the Riemann problem for the mom_comp component of the momentum\n",
+    "    # flux StildeD in the flux_dirn direction.\n",
+    "    \n",
+    "    # st_j_flux = (c_\\min f_R + c_\\max f_L - c_\\min c_\\max ( st_j_r - st_j_l )) / (c_\\min + c_\\max)\n",
+    "    return (cmin*Fr + cmax*Fl - cmin*cmax*(Ur-Ul) )/(cmax + cmin)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_E_i_flux(inputs_provided=True,alpha_face=None,gamma_faceDD=None,beta_faceU=None,\\\n",
+    "                       Valenciav_rU=None,B_rU=None,Valenciav_lU=None,B_lU=None):\n",
+    "    find_cmax_cmin(flux_dirn,gamma_faceDD,beta_faceU,alpha_face)    \n",
+    "    \n",
+    "    global A_rhsD\n",
+    "    # We will need to add to this rhs formula in several functions. To avoid overwriting previously written\n",
+    "    # data, we use declarerank1() instead of zerorank1(). \n",
+    "    A_rhsD = ixp.declarerank1(\"A_rhsD\",DIM=3)\n",
+    "    for flux_dirn in range(3):\n",
+    "        calculate_flux_and_state_for_Induction(flux_dirn, gamma_faceDD,beta_faceU,alpha_face,\\\n",
+    "                                               Valenciav_rU,B_rU)\n",
+    "        Fr = F\n",
+    "        Ur = U\n",
+    "        calculate_flux_and_state_for_Induction(flux_dirn, gamma_faceDD,beta_faceU,alpha_face,\\\n",
+    "                                               Valenciav_lU,B_lU)\n",
+    "        Fl = F\n",
+    "        Ul = U\n",
+    "        A_rhsD[flux_dirn] += HLLE_solver(cmax, cmin, Fr, Fl, Ur, Ul)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below are the gridfunction registrations we will need for testing. They are being added early for reference as I write the code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We will pass values of the gridfunction on the cell faces into the function. This requires us\n",
+    "# to declare them as C parameters in NRPy+. We will denote this with the _face infix/suffix.\n",
+    "alpha_face = gri.register_gridfunctions(\"AUXEVOL\",\"alpha_face\")\n",
+    "gamma_faceDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceDD\",\"sym01\")\n",
+    "beta_faceU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"beta_faceU\")\n",
+    "\n",
+    "# We'll need some more gridfunctions, now, to represent the reconstructions of BU and ValenciavU\n",
+    "# on the right and left faces\n",
+    "Valenciav_rU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Valenciav_rU\",DIM=3)\n",
+    "B_rU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_rU\",DIM=3)\n",
+    "Valenciav_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Valenciav_lU\",DIM=3)\n",
+    "B_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_lU\",DIM=3)\n"
+   ]
   }
  ],
  "metadata": {
